# PriceNavigator

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  exports.py  offers.py  optimization.py  products.py  shopping_lists.py  shops.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  entities.py
backend/app/repositories/: offers.py  optimization_runs.py  product_sources.py  products.py  shopping_lists.py  shops.py
backend/app/schemas/: common.py  offers.py  optimization.py  products.py  shopping_lists.py  shops.py
backend/app/services/: catalog.py  export.py  offer_search.py  optimization.py  product_assets.py  product_matching.py  product_resolver.py  seeding.py
backend/migrations/: env.py
backend/migrations/versions/: 20260327_0001_initial.py
backend/pricenavigator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: load_seed.sh  start.sh
backend/tests/: conftest.py  test_crud_api.py  test_matching.py  test_offer_search_api.py  test_optimization.py  test_optimize_api.py  test_product_sources_api.py  test_products_api.py  test_resolve_api.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: data-table.tsx  offer-editor-modal.tsx  optimization-result-view.tsx  page-header.tsx  (+3 more)
(+21 files in other folders)
